# synaptipy

./: .codecov.yml  .coverage  .flake8  .gitignore  .readthedocs.yaml  AUDIT_REPORT.md  BACKEND_COMPLETE.md  BUGFIX_SUMMARY.md  BUGFIX_VERIFICATION_REPORT.md  BUG_14_AUTO_TRIGGER_FIX.md  BUG_15_DATA_CLEARED_FIX.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTEXT_TRANSFER.md  CONTRIBUTING.md  DEBOUNCING_IMPLEMENTATION.md  DOCUMENTATION_AUDIT_REPORT.md  Dockerfile  ERROR_REPORT.md  FINAL_GUI_COMPLETION_REPORT.md  FINAL_GUI_REPORT.md  FINAL_STATUS.md  FINAL_VERIFICATION_GUIDE.md  GUI_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  LOG_ERROR_ANALYSIS.md  MANIFEST.in  MANUAL_TESTING_GUIDE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_IMPLEMENTATION_SUMMARY.md  REFACTORING_TEST_PLAN.md  REFACTORING_TEST_RESULTS.md  REMEDIATION_SUMMARY.md  SESSION_HANDOFF.md  TODO_COMPLETION.md  WINDOWS_FIX_SUMMARY.md  analysi_config_default.json  bandit.yaml  (+49 more)
$WORKSPACE_ROOT/scripts/: run_tests.py
.agent/: rules.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: dependabot-auto-merge.yml  docs.yml  installer.yml  release.yml  test.yml
Anzal_scritps/: .FileLoader.py.swp  .FileOpener_v1_curve_fit.py.swo  .FileOpener_v1_curve_fit.py.swp  .FileSaver.py.swp  .MainWindow.py.swp  .SweepAnalyses.py.swp  FileLoader.py  FileOpener_v1_curve_fit.py  FileOpener_v1_trialstructure_not_fixed.py  FileSaver.py  MainWindow.py  MainWindow_v1.py  SweepAnalyses.py
Synaptipy/: LICENSE  README.md  draw_tree.sh  pyproject.toml  requirements-dev.txt
Synaptipy/src/Synaptipy/: __init__.py
Synaptipy/src/Synaptipy/application/: __main__.py
Synaptipy/src/Synaptipy/application/cli/: main.py
Synaptipy/src/Synaptipy/application/gui/: __init__.py  analyser_tab.py  dummy_classes.py  explorer_tab.py  exporter_tab.py  main_window.py  nwb_dialog.py
Synaptipy/src/Synaptipy/application/gui/analysis_tabs/: rmp_tab.py  spike_tab.py
Synaptipy/src/Synaptipy/core/: data_model.py  event_detector.py
Synaptipy/src/Synaptipy/core/analysis/: __init__.py  basic_features.py
Synaptipy/src/Synaptipy/infrastructure/exporters/: nwb_exporter.py
Synaptipy/src/Synaptipy/infrastructure/file_readers/: neo_adapter.py
Synaptipy/src/Synaptipy/shared/: constants.py  error_handling.py
Synaptipy/tests/application/gui/: test_main_window.py
Synaptipy/tests/infrastructure/exporters/: __init__.py  test_nwb_exporter.py
docs/: Makefile  algorithmic_definitions.md  api_reference.md  comparison_table.md  conf.py  developer_guide.md  extending_synaptipy.md  index.rst  make.bat  nwb_mapping.md  references.md  reproducibility.md  requirements.txt  user_guide.md
docs/decisions/: PERFORMANCE_OPTIMIZATIONS.md  REFACTORING_GUIDE.md  RENDERING_OPTIMIZATIONS.md  _INTERNAL_REFACTORING_GUIDE.md  index.md
docs/development/: index.md  styling_guide.md
docs/development_logs/: BUGFIX_SUMMARY.md  (+22 more)
documents/: generate_tutorial.py  tutorial.md
examples/: 01_batch_analysis.ipynb  02_optogenetics.ipynb  03_custom_plugin.ipynb  04_eneuro_demo.py  README.md  basic_usage.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_02596367a5024856___init___py.html  z_02596367a5024856_ui_generator_py.html  z_04adc8ac457d6d8a___init___py.html  z_08fda6d0d9a63f9f___init___py.html  z_08fda6d0d9a63f9f_config_panel_py.html  z_08fda6d0d9a63f9f_plot_canvas_py.html  z_08fda6d0d9a63f9f_toolbar_py.html  z_08fda6d0d9a63f9f_y_controls_py.html  z_0f0915a2b25d8db5___init___py.html  z_1004c21fed1b7ca3___init___py.html  z_1004c21fed1b7ca3_batch_engine_py.html  z_1004c21fed1b7ca3_cross_file_utils_py.html  z_1004c21fed1b7ca3_epoch_manager_py.html  z_1004c21fed1b7ca3_evoked_responses_py.html  z_1004c21fed1b7ca3_firing_dynamics_py.html  z_1004c21fed1b7ca3_passive_properties_py.html  z_1004c21fed1b7ca3_registry_py.html  z_1004c21fed1b7ca3_single_spike_py.html  z_1004c21fed1b7ca3_synaptic_events_py.html  z_18a884d6dc98c872___init___py.html  z_18a884d6dc98c872_data_loader_py.html  z_18a884d6dc98c872_session_manager_py.html  z_1a1a31024f5235bf_plugin_template_py.html  z_2f2d4cf8efa2a184___init___py.html  z_2f2d4cf8efa2a184_constants_py.html  z_2f2d4cf8efa2a184_cursor_manager_py.html  z_2f2d4cf8efa2a184_data_cache_py.html  z_2f2d4cf8efa2a184_error_handling_py.html  z_2f2d4cf8efa2a184_logging_config_py.html  z_2f2d4cf8efa2a184_scroll_settings_py.html  z_2f2d4cf8efa2a184_utils_py.html  z_31ebe00504601989___init___py.html  z_31ebe00504601989_batch_engine_py.html  z_31ebe00504601989_cross_file_utils_py.html  z_31ebe00504601989_epoch_manager_py.html  z_31ebe00504601989_evoked_responses_py.html  (+74 more)
installer/: windows_setup.iss
paper/: README.md  figure_scripts  frozen_environment_macos_arm64.txt  new_tables.md  paper.bib  paper.md  validation_results_provenance.json  validation_results_tidy_provenance.json
scripts/: benchmark_e2e.py  benchmark_rendering.py  build_icons.py  build_offline_help.py  bump_version.py  capture_screenshots.py  fix_flake8_advanced.py  fix_remaining_lints.py  fix_style.py  generate_benchmarks.py  generate_gui_figure.py  generate_paper_tables.py  generate_tutorial.py  generate_workflow_video.py  plot_csvs.py  plot_utils.py  run_flexible_batch.py  run_tests.py  run_validation.py  stitch_gui_figure.py  validate_benchmarks.py  validate_efel.py  verify_ci.py  verify_headless.py
scripts_from_isope/: Analyses.py  MainWindow.py  MoveTraces.py  OpenFiles.py  SynaptiPY.py
tests/: conftest.py  debug_neo_src.py  repro_dots.py  test_registry_metadata.py  test_trial_selection_logic.py  verify_batch_engine.py  verify_batch_integration.py  verify_batch_workflow.py  verify_button_state.py  verify_dialog_init.py  verify_export_fix.py  verify_exporter_tab.py  verify_json_export.py  verify_selection_fix.py  verify_spike_math_fix.py
validation/: __init__.py  benchmark_real_data.py  cross_validation.py  report.json  report.md  sensitivity_analysis.py  sensitivity_report.md  sensitivity_results.json  validate_algorithms.py
verification_output/: verification_report.md
(+561 files in other folders)
