[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Synaptipy"
version = "0.1.0b1"
description = "Electrophysiology Visualization Suite"
authors = [
    {name = "Anzal K Shahul", email = "anzal.ks@gmail.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
keywords = [
    "electrophysiology", "patch-clamp", "neuroscience", "visualization",
    "ephys", "neo", "nwb", "signal-processing", "batch-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/anzalks/synaptipy"
Documentation = "https://synaptipy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/anzalks/synaptipy/issues"
Changelog = "https://github.com/anzalks/synaptipy/blob/main/CHANGELOG.md"
Source = "https://github.com/anzalks/synaptipy"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "pandas>=2.3.0",
    "pyqtgraph>=0.13.0",
    "pyside6==6.7.3",
    "neo>=0.14.0",
    "pynwb>=3.1.0",
    "h5py>=3.14.0",
    "hdmf>=4.1.0",
    "quantities>=0.16.1",
    "jsonschema>=4.25.0",
    "ruamel-yaml>=0.18.0",
    "attrs>=25.3.0",
    "packaging>=25.0",
    "platformdirs>=4.3.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.0",
    "typing-extensions>=4.14.0",
    "tzlocal>=5.3.0",
]

# Runtime deps above; test/docs extras below

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-mock",
    "pytest-cov",
    "flake8",
    "black",
    "isort",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "mock>=5.0.0",
]

[project.scripts]
synaptipy = "Synaptipy.application.__main__:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Synaptipy = [
    "*.yml", "*.yaml", "*.txt", "*.json",
    "resources/**/*",
    "templates/**/*",
    "**/*.png", "**/*.svg", "**/*.ico",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".verify_venv", ".git", "__pycache__", "*.egg-info"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
