[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Synaptipy"
version = "0.1.0b3"
description = "Electrophysiology Visualization Suite"
authors = [
    {name = "Anzal K Shahul", email = "anzal.ks@gmail.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "pandas>=2.3.0",
    "pyqtgraph>=0.13.0",
    "pyside6>=6.7.0",
    "neo>=0.14.0",
    "pynwb>=3.1.0",
    "h5py>=3.14.0",
    "hdmf>=4.1.0",
    "quantities>=0.16.1",
    "jsonschema>=4.25.0",
    "ruamel-yaml>=0.18.0",
    "attrs>=25.3.0",
    "packaging>=25.0",
    "platformdirs>=4.3.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.0",
    "typing-extensions>=4.14.0",
    "tzlocal>=5.3.0",
]

# Runtime deps above; test/docs extras below

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-mock",
    "pytest-cov",
    "flake8",
    "black~=26.1",
    "isort~=8.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "mock>=5.0.0",
]

[project.scripts]
synaptipy = "Synaptipy.application.__main__:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Synaptipy = ["*.yml", "*.yaml", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".verify_venv", ".git", "__pycache__", "*.egg-info"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=Synaptipy.core --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["Synaptipy"]

[tool.coverage.run]
source = ["src/Synaptipy/core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
