[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaptipy"
version = "0.1.2b2"
description = "Electrophysiology Visualization Suite"
authors = [
    {name = "Anzal K Shahul", email = "anzal.ks@gmail.com"}
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
keywords = [
    "electrophysiology", "patch-clamp", "neuroscience", "visualization",
    "ephys", "neo", "nwb", "signal-processing", "batch-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "pandas>=2.3.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pyqtgraph>=0.13.3,<1.0.0",
    # PySide6 6.8.0 contains a critical crash on Windows (QTBUG-130070).
    # Pin to 6.7.3 exactly on Windows; allow >=6.7.0 (excluding 6.8.0) elsewhere.
    "PySide6==6.7.3 ; sys_platform == 'win32'",
    "PySide6>=6.7.0, !=6.8.0, <7.0.0 ; sys_platform != 'win32'",
    "neo>=0.14.0,<1.0.0",
    "pynwb>=3.1.0",
    "h5py>=3.14.0",
    "hdmf>=4.1.0",
    "quantities>=0.16.1",
    "jsonschema>=4.25.0",
    "ruamel-yaml>=0.18.0",
    "attrs>=25.3.0",
    "packaging>=25.0",
    "platformdirs>=4.3.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.0",
    "typing-extensions>=4.14.0",
    "tzlocal>=5.3.0",
    # Out-of-core / chunked array processing for large recordings (> 500 MB).
    # The core array module only; no distributed scheduler pulled in.
    "dask[array]>=2024.1.0",
]

# Runtime deps above; test/docs extras below

[project.urls]
Homepage = "https://github.com/anzalks/synaptipy"
Documentation = "https://synaptipy.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/anzalks/synaptipy/issues"
Changelog = "https://github.com/anzalks/synaptipy/blob/main/CHANGELOG.md"
Source = "https://github.com/anzalks/synaptipy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "pytest-mock",
    "pytest-cov",
    "nbval",
    "flake8",
    "black~=26.1",
    "isort~=8.0",
    "pyinstaller>=6.5.0",
    "pillow>=10.2.0",
    "icnsutil>=1.1.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-design>=0.5.0",
    "mock>=5.0.0",
]

[project.scripts]
synaptipy = "Synaptipy.application.__main__:run_gui"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Synaptipy = [
    "*.yml", "*.yaml", "*.txt", "*.json",
    "resources/**/*",
    "templates/**/*",
    "**/*.png", "**/*.svg", "**/*.ico",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".verify_venv", ".git", "__pycache__", "*.egg-info"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/Synaptipy --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["Synaptipy"]

[tool.coverage.run]
source = ["src/Synaptipy"]
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Pure Qt dialog / window classes — zero testable business logic
    "*/gui/batch_dialog.py",
    "*/gui/plot_save_dialog.py",
    "*/gui/preferences_dialog.py",
    "*/gui/session_summary_dialog.py",
    "*/gui/nwb_dialog.py",
    "*/gui/help_window.py",
    "*/gui/plot_customization_dialog.py",
    "*/gui/about_dialog.py",
    "*/gui/welcome_screen.py",
    # Complex GUI tabs / widgets (Qt event-driven, covered via E2E only)
    "*/gui/analyser_tab.py",
    "*/gui/analysis_tabs/base.py",
    "*/gui/analysis_tabs/metadata_driven.py",
    "*/gui/analysis_worker.py",
    "*/gui/analysis_config_dialog.py",
    "*/gui/dialogs/plot_export_dialog.py",
    "*/gui/dialogs/export_manager.py",
    "*/gui/explorer/explorer_tab.py",
    "*/gui/explorer/sidebar.py",
    "*/gui/widgets/plot_canvas.py",
    "*/gui/widgets/preprocessing.py",
    "*/gui/main_window.py",
    "*/gui/exporter_tab.py",
    # Qt rendering / theming utilities
    "*/shared/theme_manager.py",
    "*/shared/viewbox.py",
    "*/shared/plot_exporter.py",
    "*/shared/plot_zoom_sync.py",
    "*/shared/zoom_theme.py",
    "*/shared/plot_factory.py",
    "*/shared/styling.py",
    "*/shared/plot_customization.py",
    # Application entry points (not unit-testable without subprocess)
    "*/__main__.py",
    # Startup / plugin loader (requires full app context)
    "*/startup_manager.py",
    "*/application/plugin_manager.py",
    # Controllers with tight GUI coupling
    "*/controllers/analysis_formatter.py",
    "*/controllers/analysis_plot_manager.py",
    "*/controllers/file_io_controller.py",
    # Infrastructure with heavy external format dependencies
    "*/exporters/nwb_exporter.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
